fixed like button position on mobile

--- a/webApp/thirstyCat/src/main/resources/static/css/main.css
+++ b/webApp/thirstyCat/src/main/resources/static/css/main.css
@@ -47,7 +47,7 @@ body {
 	}
 
 	#fav-container {
-		top: 85%;
+		top: 85% !important;
 	}
 	
 	#drink-info-container {
